Fix Shared Media: Layout issue (#553)

--- a/src/components/right/Profile.scss
+++ b/src/components/right/Profile.scss
@@ -27,6 +27,7 @@
       font-size: 1.5rem;
       line-height: 2rem;
       white-space: pre-wrap;
+      word-break: break-word;
 
       .VerifiedIcon {
         margin-left: 0.25rem;
